# cyber-workspace

./: CMakeLists.txt  README.md
desktop-daemon/: CMakeLists.txt  Desktop.qml  desktopview.cpp  desktopview.h  main.cpp  settings.cpp  settings.h
desktop-daemon/translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_CN.ts  zh_HK.ts  zh_Hant.ts  zh_Hant_HK.ts  zh_TW.ts
hotkeys/: CMakeLists.txt  hotkeys.cpp  hotkeys.h  main.cpp
notification-daemon/: CMakeLists.txt  application.cpp  application.h  iconthemeprovider.cpp  iconthemeprovider.h  main.cpp  notification.cpp  notification.h  notificationmanager.cpp  notificationmanager.h  org.freedesktop.Notifications.xml  qml_notificationbase.cpp  qml_notificationbase.h
notification-daemon/qml/: NotificationDisplay.qml  main.qml  resources.qrc
polkit-agent/: CMakeLists.txt  cyber-polkit-agent.desktop  dialog.cpp  main.cpp  main.qml
polkit-agent/translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pt_BR.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_HK.ts  zh_Hant.ts  zh_Hant_HK.ts  zh_TW.ts
screen-brightness/: main.cpp
session/: CMakeLists.txt  application.cpp  application.h  main.cpp  org.cyber.Session.xml  processmanager.cpp  processmanager.h  systemmodules.cpp  systemmodules.h  xdgautostart.cpp  xdgautostart.h
session/powermanager/: power.cpp  powerproviders.cpp
settings-daemon/: CMakeLists.txt  application.cpp  application.h
settings-daemon/audio/: org.cyber.Audio.xml
settings-daemon/battery/: battery.cpp  battery.h  org.cyber.PrimaryBattery.xml
settings-daemon/brightness/: brightnessmanager.cpp  brightnessmanager.h  org.cyber.Brightness.xml
settings-daemon/theme/: org.cyber.Theme.xml  thememanager.cpp  thememanager.h
settings-daemon/translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_CN.ts  zh_HK.ts  zh_Hant.ts  zh_Hant_HK.ts  zh_TW.ts
shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  actions.h  main.cpp  main.qml  qml.qrc
shutdown-ui/translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pt_BR.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_CN.ts  zh_HK.ts  zh_Hant.ts  zh_Hant_HK.ts  zh_TW.ts
xembed-sni-proxy/: CMakeLists.txt
